my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/20120427-2.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20120427-2.c:7:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
    7 | sreal_compare (sreal *a, sreal *b)
      | ^
      | int
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20120427-2.c:32:55: error: call to undeclared library function 'abort' with type 'void (void) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   32 |       if (i < j && sreal_compare(&a[i], &a[j]) != -1) abort();
      |                                                       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20120427-2.c:32:55: note: include the header <stdlib.h> or explicitly provide a declaration for 'abort'
2 errors generated.
